Fix scrollbar always visible

--- a/www/Styles/css/App.css
+++ b/www/Styles/css/App.css
@@ -3,6 +3,10 @@
     white-space: pre;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 .entries {
     margin-bottom: 200px;
 }
